--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ asyncpg = "^0.29.0"
 pydantic = "^2.6.1"
 pydantic-settings = "^2.2.1"
 python-dotenv = "^1.0.1"
+iso4217 = "^1.11.20220401"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
