add/main features - main features added - README provided - background task created - dockerfile and docker-compose file created - migrations added

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,4 @@
-APP_ROOT_PATH=''
-APP_DEBUG=True
-
-DATABASE_NAME=database
-DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=password
-DATABASE_HOST=localhost
-DATABASE_ECHO=True
+database_password=1337
+database_host=database
+database_name=exchangeservice
+rates_access_key=some_token
