--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ sqlalchemy = "^2.0.27"
 alembic = "^1.13.1"
 asyncpg = "^0.29.0"
 pydantic = "^2.6.1"
+orjson = "^3.9.14"
 pydantic-settings = "^2.2.1"
 python-dotenv = "^1.0.1"
 iso4217 = "^1.11.20220401"
@@ -59,7 +60,10 @@ strict_equality = true
 target-version = "py311"
 exclude = [
     "alembic",
-    "tests",
+    "tests"
 ]
 # sorting and unusued imports
 lint.select = ["I001", "F401"]
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
